# enja

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  mise.toml  package.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.serena/: project.yml
.serena/memories/: conventions.md  core.md  suggested_commands.md  task_completion.md  tech_stack.md
docs/: apple-speechanalyzer.md  architecture.md
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/screen-context-helper/: main.swift
src-tauri/speech-helper/: main.swift
src-tauri/src/: dictionary.rs  gemini.rs  keyboard.rs  lib.rs  macos_show_on_activate.rs  main.rs  notes.rs  prompts.rs  secrets.rs  settings.rs  usage.rs  voice.rs
src-tauri/src/keyboard/macos/: capture.rs  ffi.rs  fn_keys.rs  keys.rs  state.rs  tap.rs  tests.rs
src-tauri/src/voice/: aec.rs  audio.rs  cache.rs  devices.rs  dictionary_learning.rs  events.rs  live.rs  paste.rs  recorder.rs  screen_context.rs  system_tap.rs  text_diff.rs  transcribe.rs  window.rs
src/components/: DictionaryView.tsx  LeftPanel.tsx  RightPanel.tsx  SettingsView.tsx  StreamingMarkdown.tsx  TranslationLanguageBar.tsx  VoiceOverlay.tsx  ui.tsx
src/components/notes/: NotesView.tsx  RichNoteEditor.tsx
src/components/settings/: SettingsControls.tsx  SettingsSections.tsx  UsageCostsSection.tsx  speechProfiles.tsx
src/lib/: audioInputDevices.test.ts  audioInputDevices.ts  commands.ts  linkifyText.test.ts  linkifyText.ts  persistTranslationLanguages.ts  settingsHelpers.test.ts  settingsHelpers.ts  startTranslation.ts  stickyNotes.test.ts  stickyNotes.ts  theme.ts  translationBatcher.test.ts  translationBatcher.ts  uiLanguage.ts
src/stores/: useAppStore.ts
