[package]
name = "enja"
version = "0.1.0"
description = "Enja — Cmd+C double-tap translator"
authors = ["rayyyy"]
license = "MIT"
repository = "https://github.com/rayyyy/enja"
edition = "2021"

[lib]
name = "enja_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "fs", "io-util"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
futures-util = "0.3"
bytes = "1"
arboard = "3"
thiserror = "1"

