[package]
name = "enja"
version = "0.1.0"
description = "Enja — Cmd+C double-tap translator"
authors = ["rayyyy"]
license = "MIT"
repository = "https://github.com/rayyyy/enja"
edition = "2021"

[lib]
name = "enja_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-autostart = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "fs", "io-util"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "stream"] }
futures-util = "0.3"
bytes = "1"
arboard = "3"
thiserror = "1"
base64 = "0.22"
cpal = "0.15"
hound = "3"
jsonwebtoken = "9"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = [
 "block2",
  "NSString",
  "NSNotification",
  "NSObject",
  "NSOperation",
] }
objc2-app-kit = { version = "0.3", default-features = false, features = [
  "std",
  "NSApplication",
  "NSResponder",
] }
webrtc-audio-processing = { version = "2", features = ["bundled"] }
core-foundation = "0.10"
core-foundation-sys = "0.8"
